[package]
name = "quacken"
version = "0.1.0"
authors = ["darrylpargeter <darrylpargeter@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
rocket = "0.4.2"
notify = "4.0.12"
hotwatch = "0.4.2"
regex = "1"
dirs = "2.0"
